<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".RegCustomer">

    <CheckBox
        android:id="@+id/regCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/terms_conditions"
        android:textColor="#575151"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/regCusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/regCusButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cancelRegCusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelRegCusButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/buttons"
        android:text="@string/cancel"
        android:textColor="#FFFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:id="@+id/passwordCusText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/passwordCus"
        android:textAlignment="viewStart"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/passwordCus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCusText" />

    <TextView
        android:id="@+id/emailCusText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordCusText"
        app:layout_constraintEnd_toStartOf="@+id/emailCus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sNameCusText"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/sNameCus"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/emailCus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sNameCusText"
        app:layout_constraintTop_toBottomOf="@+id/fCusName"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sNameCusText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/second_name"
        android:textAlignment="viewStart"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/emailCusText"
        app:layout_constraintEnd_toStartOf="@+id/sNameCus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameCusText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/regCusTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="50dp"
        android:text="@string/register_as_customer"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fCusName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/fNameCusText"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/first_name"
        android:textAlignment="viewStart"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sNameCusText"
        app:layout_constraintEnd_toStartOf="@+id/fCusName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regCusTopic"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/fCusName"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sNameCus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fNameCusText"
        app:layout_constraintTop_toBottomOf="@+id/regCusTopic"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/emailCus"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordCus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/emailCusText"
        app:layout_constraintTop_toBottomOf="@+id/sNameCus"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/passwordCus"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/passwordCusText"
        app:layout_constraintTop_toBottomOf="@+id/emailCus" />


    <Button
        android:id="@+id/insertProButtonCus"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#4C6793"
        android:paddingTop="0dp"
        android:text="@string/upload_profile_photo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/regCusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="730dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flower" />


</androidx.constraintlayout.widget.ConstraintLayout>