<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:backgroundTint="#FDFDFD"
    tools:context=".Login">

    <Button
        android:id="@+id/regNowButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/light_grey"
        android:text="@string/register_now"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/emailText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/emailText"
        android:textColor="#575151"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pname"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#e8e8e8"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#575151"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordCusLayout"
        android:layout_width="300dp"
        android:layout_height="49dp"

        android:backgroundTint="#54C1BDBD"
        android:ems="10"
        android:inputType="textPassword"
        android:text="password"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.5"
        app:passwordToggleEnabled='true'>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordCus"
            android:background="@drawable/rounded_corner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:marqueeRepeatLimit="0" />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/forgot_password"
        android:textAlignment="viewEnd"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/submitLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCusLayout"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="#575151"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordCusLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/submitLoginButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/buttons"
        android:backgroundTint="#2B1650"
        android:fontFamily="sans-serif"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/pname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        android:textColor="#CE2B1650"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/not_a_member"
        android:textColor="#575151"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/regNowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitLoginButton"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="682dp"
        android:layout_height="476dp"
        android:layout_marginBottom="700dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/flower2" />


</androidx.constraintlayout.widget.ConstraintLayout>