<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="118dp"
            android:background="@drawable/borders"
            android:backgroundTint="#e8e8e8"
            >


            <Button
                android:id="@+id/modifyProfileButton"
                android:layout_width="170dp"
                android:layout_height="53dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="500dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/buttons"
                android:text="@string/modify_profile"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/catNameBox"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="350dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="User"
                android:textColor="#575151"
                android:textStyle="bold"
                />



            <TextView
                android:id="@+id/textView"
                android:layout_width="178dp"
                android:layout_height="57dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="100dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#040000"
                android:textSize="34sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/fn"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="350dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="Testing"
                android:textColor="#575151"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="290dp"
                android:layout_height="53dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="420dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="testinguser@gmail.com"
                android:textColor="#575151"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="210dp"
                android:layout_height="152dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="100dp"
                />

            <Button
                android:id="@+id/viewInventoryButtton"
                android:layout_width="170dp"
                android:layout_height="53dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="500dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/buttons"
                android:text="@string/my_inventory"
                android:textColor="#FFFFFF"
                />

        </RelativeLayout>




    </FrameLayout>

